--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -63,7 +63,7 @@ From the initial conditions $(\mathbf{r}_i(0),\dot{\mathbf{r}}_i(0.5\delta t))$,
 
 \subsubsection{Diffusivity calculation using an MD trajectory}
 
-I used the MSD sampling technique implemented in RASPA\autocite{dubbeldam2016} that was presented in an article~\cite{Dubbeldam_2009} by a few authors of the adsorption simulation software. The approach is based on a modified approach of the order-$\mathbf{n}$ algorithm described in the book of Frenkel and Smit~\cite{frenkel2001msd} I will focus, therefore, on the so-called multiple window algorithm used to calculate the diffusion coefficients of xenon and krypton in this chapter. 
+I used the MSD sampling technique implemented in RASPA\autocite{dubbeldam2016} that was presented in an article~\cite{Dubbeldam_2009} by a few authors of the adsorption simulation software. The approach is based on a modified approach of the order-$\mathbf{n}$ algorithm described in the book~\cite{frenkel2001msd} of Frenkel and Smit. Therefore, I will focus on the so-called multiple window algorithm used to calculate the diffusion coefficients of xenon and krypton in this chapter. 
 
 To understand it, I will start by explaining what a window algorithm would do and how it generalizes to the multiple window algorithm we are interested in.
 First, let us consider a single MD trajectory of duration $t\e{tot}=N\e{tot}\delta t$. This trajectory can be used to generate displacement of any size $\tau$. Naively, we can start by taking ${\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert}^2$ as a square displacement of a sub-trajectory $\mathcal{T}(0\rightarrow\tau)$ of duration $\tau$. 
@@ -179,7 +179,7 @@ This approach only probes the linear relations between the MSD and time to deter
 
 \subsubsection{Structure--diffusivity relationships}
 
-In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper \cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
+In this section, I will present the different relations the diffusion coefficient may or may not have with the geometrical descriptors. I decided to use a forcefield-dependent definition of the radii so that it better correlates with the results of the MD simulation that uses the UFF forcefield. The different geometrical descriptors are then calculated using Zeo++ and these radii to calculate the PLD, the largest sphere diameter D$_{if}$ along a free path, the surface area and the pore volume, as already explained in the chapter 2. To further justify the use of the UFF-based radii, the original paper~\cite{Hung_2021} showed the better correlation of the PLD to the diffusion constant, and we can also see it from the Figure~\ref{fgr:diff_pld}. The PLD calculated by the standard CCDC defined atom radii does not fit the diffusion coefficient as well as the UFF-defined PLD. As shown in a smaller scale in the article~\cite{Haldoupis_2010} (see Figure~\ref{fgr:Haldoupis_2010} in the chapter 1), there is a linear relation between the diffusion activation energy (logarithmic transform of the diffusion coefficient) and the PLD, and this linear relation is much more noisy for the PLD defined by the standard CCDC radii than for the UFF-based PLD.
 
 Beyond the practical considerations on the geometrical descriptor calculations, the PLD explains the outlines of the variation of diffusion performance inside a nanoporous material. First there is a the linear relation previously highlighted, and then there is a sort of noisy plateau. In the first zone, the xenon is constrained by channels narrower than its kinetic radius. The wider the channel the higher the diffusion coefficient is, and this positive correlation persists until the channel is wider than about \SI{4.6}{\angstrom}. After this threshold, the diffusion coefficient is rather stable around $10^{-4}$~\si{\square\cm\per\square\s}, and the variations can only be explained by other phenomena such as the tortuosity inside nanopores or chemical nature of the surface of the nanopores. This value of diffusion coefficient is roughly the diffusion coefficient of a free xenon outside of the material. The material channels do not affect much the diffusion of the xenon inside the nanoporous materials represented on this plateau line.
 
@@ -284,13 +284,14 @@ If we look into the details of these structures, we can see that they combine la
 \end{figure}
 
 
-We can see that at higher pressure, some materials experience a shift toward lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code XUNSOQ\autocite{Abrahams_2014} and GUMDEZ\cite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as QOZDOY\cite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF MISQIQ\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
+We can see that at higher pressure, some materials experience a shift toward lower selectivity values. And, only 2 structures have an ambient-pressure selectivity over $40$: the MOFs with the following CSD code XUNSOQ\autocite{Abrahams_2014} and GUMDEZ\autocite{Yin_2014}  (see Table~\ref{table:diff}). Most of these materials actually have a high value of cavity size, only structures with LCD near \SI{6}{\angstrom} are left in this area of the plot. We can also note that the dimension of the channel is equal to one too, which starts to brush a picture of the interesting materials. These materials are constituted of unidimensional channels with a small pore sizes so that the selectivity is conserved even at higher pressure conditions. If we broaden the scope to the structures with a selectivity higher than $30$ instead of $40$, we now have 38 structures that also have similar features with rather low pore sizes and low channel dimensionality. Some of these structures have more or less kept their selectivity such as QOZDOY\autocite{Zhang_2001} and wasn't detected on the pre-screening on the low-pressure selectivity (Figure~\ref{fgr:perm_selec0}), but other structures, such as the MOF MISQIQ\autocite{Tong_2013}, actually dropped significantly in selectivity values from infinite dilution to ambient pressure (see Table~\ref{table:diff}). 
 
-Since we are interested in optimizing the kinetic properties of materials for adsorption-based separation, we will not try to optimize the perm-selectivity also known as the membrane selectivity that is specifically useful for membrane separations. From this screening of the most selective materials, we identified some interesting materials that will be further studied in the following subsection. 
+When considering the ambient-pressure selectivity, the large majority of highly selective materials actually have a rather low diffusion selectivity (lower than $0.1$), as we can see on the Figure~\ref{fgr:perm_selec2080} (this was not the case for the low-pressure selectivity). This result actually suggest that we actually need to make a trade-off between adsoprtion selectivity and diffusion selectivity. In our approach, we decided to lower the adsorption diffusivity to values around $40$ to allow for higher diffusion selectivity values, because the approach up until now only mazimized the adsorption selectivity and the values on the lower right side of the plots of Figure~\ref{fgr:perm_selec2080} are actually already obtained and studied in standard screenings in the literature\autocite{Simon_2015,Chung_2019} but also in one of my published work~\ref{Ren_2021}. Also, we did not try to optimize the perm-selectivity also known as the membrane selectivity because it is specifically useful for membrane separations and many studies in the literature focus on this aspect of the screening\autocite{Anderson_2017,Wang_2022}. From the screening we presented here, we rather want to find thermodynamically selective materials that are not limited by diffusion and identified some interesting materials that will be further studied in the following subsection. 
 
 
 \subsubsection{Identification of interesting materials}
 
+\todo{Visualization of the energy map inside}
 
 % En analysant les rapports des coefficients de diffusion en comparaison des sélectivités, on a pu identifier deux structures qui couplent une bonne sélectivité à un ratio de diffusivités autour de 0,5 (\emph{cf.} table~\ref{table:diff}) : les structures de code CCSD GUMDEZ et QOZDOY. Grâce à leur LCD proches du diamètre cinétique du xénon et à un PLD assez élevé pour ne pas entraver le déplacement du xénon à travers les canaux. Les coefficients de diffusion du xénon tournent autour de 7$\times$10\ex{-5} \si{\square\centi\meter\per\second} ce qui est proche de la diffusion libre (de l'ordre de 10\ex{-5} \si{\square\centi\meter\per\second}), ce qui confirme l'absence de blocage cinétique. 
 
@@ -302,19 +303,19 @@ Since we are interested in optimizing the kinetic properties of materials for ad
 \hline
   CCSD ref.\ code &      $D_{if}\ex{UFF}$ (\si{\angstrom}) &    s$_1$ &       s$_0$ &     PLD\ex{UFF} (\si{\angstrom}) &    Xe/Kr diffusion selectivity &  Xe diff. coeff. \\
 \hline
-ADOGEH\cite{Peikert_2012} & 12.9 &  10 & 49 & 5.3 & 15.5 &               5$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
+ADOGEH\autocite{Peikert_2012} & 12.9 &  10 & 49 & 5.3 & 15.5 &               5$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
 XUNSOQ\autocite{Abrahams_2014} &  5.6 & 48 & 38 & 4.8 &  0.23 &  7$\times$10\ex{-6}~\si{\square\centi\meter\per\second} \\
-GUMDEZ\cite{Yin_2014} &  5.5 & 42 & 56 & 5.1 &  0.55 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
-QOZDOY\cite{Zhang_2001} &  5.6 & 37 & 52 & 5.0 &  0.45 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
-MISQIQ\cite{Tong_2013} &  4.6 & 37 & 140 & 4.5 &  1.4 &               2$\times$10\ex{-4} \si{\square\centi\meter\per\second} \\
+GUMDEZ\autocite{Yin_2014} &  5.5 & 42 & 56 & 5.1 &  0.55 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
+QOZDOY\autocite{Zhang_2001} &  5.6 & 37 & 52 & 5.0 &  0.45 &               7$\times$10\ex{-5} \si{\square\centi\meter\per\second} \\
+MISQIQ\autocite{Tong_2013} &  4.6 & 37 & 140 & 4.5 &  1.4 &               2$\times$10\ex{-4} \si{\square\centi\meter\per\second} \\
 \hline
 \end{tabular}
 \caption{Transport and thermodynamic performances of some top performing structures of CoRE MOF 2019. }\label{table:diff}
 \end{table}
 
-% Les résultats d'un screening couplant thermodynamique et cinétique permettent déjà de mettre en valeur des matériaux encore inconnus de la communauté. La question du blocage cinétique est certes traitée dans certaines études,\cite{Stanton_2022} mais aucune approche systématique n'a encore été développée. Ces structures ont des sélectivités élevées mais ne sont pas les plus sélectives; elles auraient donc été écartées dans un screening standard basé uniquement sur la thermodynamique. 
+% Les résultats d'un screening couplant thermodynamique et cinétique permettent déjà de mettre en valeur des matériaux encore inconnus de la communauté. La question du blocage cinétique est certes traitée dans certaines études,\autocite{Stanton_2022} mais aucune approche systématique n'a encore été développée. Ces structures ont des sélectivités élevées mais ne sont pas les plus sélectives; elles auraient donc été écartées dans un screening standard basé uniquement sur la thermodynamique. 
 
-% Cette approche basée sur des trajectoires de dynamique moléculaire présente toutefois ses propres défauts. En effet, la méthode est très lente (quelques jours de simulation par structure), les structures avec différents canaux non connectées posent problème car l'adsorbat ne peut diffuser que dans un seul des deux canaux. Ainsi, il faudrait dans certains cas faire plusieurs trajectoires ce qui demande encore davantage de temps de calcul. De plus, si l'on veut ajouter de la flexibilité, cette méthode ne pourrait être utilisée que sur quelques structures. C'est pourquoi, un algorithme bien plus efficace est en cours d'implémentation en C++ pour accélérer les calculs de diffusivité. Un tel algorithme est déjà conçu par le groupe de Berend Smit à l'EPFL \cite{Mace_2019}, mais le code étant sous Matlab (langage peut efficace), il est impossible de l'utiliser dans des procédures de screening. Cet algorithme détermine des sites d'adsorption et des états de transition pour passer d'un site à un autre. Puis à l'aide de simulations de Monte Carlo cinétique l'adsorbat se déplace d'un site à un autre au rythme d'une constante cinétique déterminée par l'état de transition. Cette méthode permet également d'identifier en avance les différents canaux et on assure que chacun d'entre eux sont traversés par des molécules. Par conséquent, ce nouveau code permettrait de résoudre les problèmes de temps de calcul et de fiabilité rencontrés avec la dynamique moléculaire. 
+% Cette approche basée sur des trajectoires de dynamique moléculaire présente toutefois ses propres défauts. En effet, la méthode est très lente (quelques jours de simulation par structure), les structures avec différents canaux non connectées posent problème car l'adsorbat ne peut diffuser que dans un seul des deux canaux. Ainsi, il faudrait dans certains cas faire plusieurs trajectoires ce qui demande encore davantage de temps de calcul. De plus, si l'on veut ajouter de la flexibilité, cette méthode ne pourrait être utilisée que sur quelques structures. C'est pourquoi, un algorithme bien plus efficace est en cours d'implémentation en C++ pour accélérer les calculs de diffusivité. Un tel algorithme est déjà conçu par le groupe de Berend Smit à l'EPFL \autocite{Mace_2019}, mais le code étant sous Matlab (langage peut efficace), il est impossible de l'utiliser dans des procédures de screening. Cet algorithme détermine des sites d'adsorption et des états de transition pour passer d'un site à un autre. Puis à l'aide de simulations de Monte Carlo cinétique l'adsorbat se déplace d'un site à un autre au rythme d'une constante cinétique déterminée par l'état de transition. Cette méthode permet également d'identifier en avance les différents canaux et on assure que chacun d'entre eux sont traversés par des molécules. Par conséquent, ce nouveau code permettrait de résoudre les problèmes de temps de calcul et de fiabilité rencontrés avec la dynamique moléculaire. 
 
 \section{Fast diffusion calculation algorithm}\label{sct:algo_diff}
 
