--- a/thesis.bib
+++ b/thesis.bib
@@ -649,6 +649,19 @@
 	title = {Computational Discovery of New Zeolite-Like Materials},
 	journal = {The Journal of Physical Chemistry C}
 }       
+@article{Anderson_2017,
+	doi = {10.1021/acsami.7b14791},
+	url = {https://doi.org/10.1021%2Facsami.7b14791},
+	year = 2017,
+	month = {dec},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {10},
+	number = {1},
+	pages = {582--592},
+	author = {Ryther Anderson and Benjamin Schweitzer and Ting Wu and Moises A. Carreon and Diego A. G{\'{o}}mez-Gualdr{\'{o}}n},
+	title = {Molecular Simulation Insights on Xe/Kr Separation in a Set of Nanoporous Crystalline Membranes},
+	journal = {ACS Appl. Mater. Interfaces}
+}
 @article{Anderson_2018,
 	doi = {10.1021/acs.jpcc.8b09420},
 	url = {https://doi.org/10.1021/acs.jpcc.8b09420},
